--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME="Expense Workflow App"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:xn2jjoUiGY1v9TIu7Yo+vDr1K5HCa1zJAqb9K9n0cjc=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://expense-app.test
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -21,7 +21,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
+# DB_HOST=127.0.0.1 
 # DB_PORT=3306
 # DB_DATABASE=laravel
 # DB_USERNAME=root
@@ -53,7 +53,7 @@ MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="noreply@expenseworkflow.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -63,3 +63,6 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Used to send the automated emails to - Please amend to your email to see the emails send in the logs
+EMAIL_RECIPIENT=""
